--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group 'com.hsoo.book'
 version '1.0.4-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
     mavenCentral()
@@ -34,6 +34,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation('com.h2database:h2')
+    implementation('org.springframework.boot:spring-boot-devtools') // h2-console 접속 가능하게 해줌
 
 //    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 권한 관련
 //    implementation('org.springframework.session:spring-session-jdbc') // 권한 관련
